# agentic-cop30

./: .gitignore  README.md  graph.py  main.py  pyproject.toml
agents/: memory.py  planner.py  web_searcher.py  writer.py
tools/: fetch.py  parse.py  rank.py
topics/: cop30.yaml
